Use immutable sets instead of hashsets for builder config